# scheduleMe

./: .env  App.js  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  index.js  macros.html.tera  package-lock.json  package.json  webpack.config.js
migrations/2022-11-01-182524_to_do_table/: up.sql
migrations/2022-12-04-110532_admin_table/: down.sql  up.sql
migrations/2022-12-04-110532_user_table/: up.sql
migrations/2023-01-18-164557_user_table/: up.sql
migrations/2023-01-18-164558_appointment_table/: up.sql
migrations/2023-01-18-164600_location_table/: up.sql
migrations/2023-02-20-201429_admin_table/: up.sql
migrations/2023-04-03-161419_admin_table/: up.sql
migrations/2023-04-03-161431_user_table/: up.sql
migrations/2023-04-03-161439_appointment_table/: up.sql
migrations/2023-04-03-161539_message_table/: up.sql
migrations/2023-06-14-180247_message_table/: up.sql
migrations/2023-06-14-211934_appointment_table/: up.sql
migrations/2023-06-14-212051_provider_table/: down.sql  up.sql
public/: Button.js  add_appointment.js  afterSeparator.js  appointment.js  beforeSeparator.js  complete_schedule.js  components.js  container.js  logincontainer.js  loginform.js  logo.js  menu.js  message.js  modal.js  navbar.js  profile.js  schedule.js  separator.js  signup.js  signupform.js  style.css  table.js
public/adminComponents/: addAppointment.js  add_appointment.js  adminProfile.js  allUserPayments.js  appointment.js  inbox.js  navbar.js  payment.js  payments.js  profile.js  schedule.js
public/providerComponents/: addAppointment.js  allUserPayments.js  appointment.js  inbox.js  navbar.js  payments.js  profile.js  schedule.js
public/publicComponents/: aboutUs.js  contacts.js  faq.js  footer.js  privacyPolicy.js  provider.js  providers.js  publicNavbar.js  support.js  termsOfService.js
public/sharedComponents/: afterSeparator.js  appointment.js  beforeSeparator.js  button.js  (+11 more)
src/: admin_functions.rs  components.rs  dtos.rs  handlers.rs  main.rs  schema.rs  sql_functions.rs  sqlx_functions.rs  user_functions.rs  user_handlers.rs
templates/: adminbase.html.tera  adminchat.html.tera  adminchats.html.tera  adminlogin.html.tera  adminpanel.html.tera  adminpayment.html.tera  adminpayments.html.tera  adminprofile.html.tera  adminschedule.html.tera  base.html.tera  chat.html.tera  contacts.html.tera  faq.html.tera  index.html.tera  location.html.tera  login.html.tera  payments.html.tera  privacypolicy.html.tera  profile.html.tera  providerbase.html.tera  providerchat.html.tera  providerchats.html.tera  providerlogin.html.tera  providerpayment.html.tera  providerpayments.html.tera  providerprofile.html.tera  providers.html.tera  providerschedule.html.tera  providersignup.html.tera  publicbase.html.tera  schedule.html.tera  signup.html.tera  socialmedia.html.tera  support.html.tera  termsofservice.html.tera  userprofile.html.tera
(+33 files in other folders)
